syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "red.tetracube";
option java_outer_classname = "TetracubeDevicesMeshGrpcProto";

package devices;

enum DeviceType {
  SWITCHER = 0;
  RGB_LED = 1;
}

enum LogicState {
  OFF = 0;
  ON = 1;
}

service TetracubeDevicesMesh {
  rpc DescribeDevicesMesh (DescribeDevicesMeshRequest) returns (DescribeDevicesMeshResponse) {}
}

message DescribeDevicesMeshRequest {
  string tetracubeId = 2;
}

message DescribeDevicesMeshResponse {
  repeated DescribeDeviceMeshResponse devices = 3;
}

message DescribeDeviceMeshResponse {
  string id = 1;
  string name = 2;
  string colorCode = 3;
  bool isOnline = 4;
  DeviceType deviceType = 5;
  SmartHomeEnvironmentResponse environment = 6;
  DeviceSwitcherResponse switcher = 7;
}

message DeviceSwitcherResponse {
  string id = 1;
  LogicState currentState = 2;
  google.protobuf.Timestamp lastActionTimestamp = 3;
  repeated LogicState actions = 4;
}

message SmartHomeEnvironmentResponse {
  string id = 1;
  string name = 2;
}